--- a/RDPInterceptor/Web/Data.html
+++ b/RDPInterceptor/Web/Data.html
@@ -23,7 +23,7 @@
             </div>
             <button onclick="AddItem()" class="btn btn-primary mb-3">Add</button>
             <button id="StartCapture" onclick="StartCapture()" class="btn btn-success mb-3">Start Interceptor</button>
-            <button id="StopCapture" onclick="StopCapture()" class="btn btn-warning mb-3">Stop Capture</button>
+            <button id="StopCapture" onclick="StopCapture()" class="btn btn-warning mb-3">Stop Interceptor</button>
             <button onclick="showSettings()" class="btn btn-secondary mb-3">Settings</button>
             <div class="form-group">
                 <label for="log-area">Log:</label>
